address spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 .terminal-card {
-  min-height: 200px;
+  height: 40vh;
 	margin-top: 10px;
 }
 
